syntax = "proto3";

package com.fanaujie.ripple.protobuf;

option java_multiple_files = true;
option java_package = "com.fanaujie.ripple.protobuf.msgapiserver";


message SingleMessageContent {
  string text = 2;
  string file_url = 3;
  string file_name = 4;
}

message StrangerInfo {
  string nick_name = 2;
  string avatar = 3;
}



message SendMessageReq {
  int64 sender_id = 1;
  string conversation_id = 2;
  int64 receiver_id = 3;
  int64 group_id = 4;
  int64 message_id = 5;
  int64 send_timestamp = 6;
  oneof message {
    SingleMessageContent single_message_content = 7;
  };
}

message SendMessageResp {
}


message SelfInfoUpdateEvent {
  enum EventType {
    UNSPECIFIED = 0;
    UPDATE_NICK_NAME = 1;
    UPDATE_AVATAR = 2;
    DELETE_AVATAR = 3;
  }
  EventType event_type = 1;
  int64 user_id = 2;
  string nickName = 3;
  string avatar = 4;
}


message RelationEvent {
  enum EventType {
    UNSPECIFIED = 0;
    ADD_FRIEND = 1;
    REMOVE_FRIEND = 2;
    UPDATE_FRIEND_REMARK_NAME = 3;
    BLOCK_STRANGER = 4;
    BLOCK_FRIEND = 5;
    UNBLOCK_USER = 6;
    HIDE_BLOCKED_USER = 7;
    UPDATE_FRIEND_INFO = 8;
  }
  EventType event_type = 1;
  int64 user_id = 2;
  int64 target_user_id = 3;
  string target_user_nick_name = 4;
  string target_user_avatar = 5;
  string target_user_remark_name = 6;
}



message SendEventReq {
  oneof event {
    SelfInfoUpdateEvent self_info_update_event = 1;
    RelationEvent relation_event = 2;
  }
}

message SendEventResp {
}

service MessageAPI {
  rpc SendMessage(SendMessageReq) returns (SendMessageResp);
  rpc SendEvent(SendEventReq) returns (SendEventResp);
}